@@ -210,6 +210,7 @@
                     <compilerArgs>
                         <arg>-parameters</arg>
                         <arg>-Xlint:all,-options,-path</arg>
+                        <arg>--add-modules=jdk.incubator.vector</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -219,6 +220,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        --add-modules=jdk.incubator.vector
+                    </argLine>
+                </configuration>
             </plugin>
 
             <!-- JavaFX Plugin -->
